[tool.poetry]
name = "jamming_dashboard"
version = "0.1.0"
description = ""
authors = ["figuetbe <benoit.figuet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.6.0"
dash-daq = "^0.5.0"
dash-bootstrap-components = "^1.2.0"
plotly = "^5.9.0"
pandas = "^1.4.3"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

